CLDR-17942 fix the test for wrong order (#4527)